# star-lost

./: .gitignore  Cargo.toml
.cargo/: config.toml
assets/: pipe_corner_diagonal.glb  pipe_corner_round.glb  pipe_corner_round_large.glb  pipe_end.glb  pipe_entrance.glb  pipe_open.glb  pipe_ramp_small.glb  pipe_ring.glb  pipe_ring_high.glb  pipe_split.glb  pipe_straight.glb  ship.glb
assets/models/: LICENSE.md  arrow.glb  pipe_corner.glb  pipe_cross.glb  pipe_ramp_large.glb  pipe_ring_high_end.glb  pipe_ring_support.glb  ship_small.glb  ship_small_thrust.glb
assets/planets/: example.planet.ron
assets/shaders/: orbital_material.wgsl
assets/systems/: real.system.ron  solar.system.ron
src/: camera.rs  controls.rs  debug.rs  dust.rs  exhaust.rs  impulse.rs  main.rs  orbit.rs  physics.rs  planets.rs  route.rs  ship.rs  station.rs  thrust.rs  tracking.rs  ui.rs  vessel.rs
src/firstperson/: controls.rs  debug.rs  impulse.rs  physics.rs  station.rs  thrust.rs  ui.rs
src/tests/: controls.rs  mod.rs  planet.rs  route.rs  station.rs  tracking.rs
src/tests/first_person/: camera.rs  controls.rs  mod.rs  planet.rs  tracking.rs
src/tests/strategy/: controls.rs
