[package]
name = "star-lost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
rand = { version = "0.8.4", features = ["std", "std_rng"] }

[dependencies.bevy]
version = "0.8.0"
default-features = false
features = [
    "bevy_scene",
    "bevy_gltf", 
    "render", 
    "bevy_winit", 
    "dynamic",
    "x11",
    "png"
]

[dependencies.bevy_kira_audio]
version = "0.11.0"
default-features = false
features = [
  "wav",
  "flac",
  "mp3",
  "ogg",
]

[dependencies.bevy_hanabi]
git = "https://github.com/MathiasPius/bevy_hanabi"
branch = "directional-sprite"
default-features = false
features = ["3d"]