[package]
name = "star-lost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rand = { version = "0.8.5", features = ["std", "std_rng"] }

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
    "file_watcher",
    "bevy_scene",
    "bevy_gltf", 
    "bevy_render", 
    "bevy_winit",
    "dynamic_linking",
    "tonemapping_luts",
    "x11",
    "png"
]

[dependencies.bevy_kira_audio]
version = "0.18.0"
default-features = false
features = [
  "wav",
  "flac",
  "mp3",
  "ogg",
]

[dependencies.bevy_hanabi]
version = "0.8.0"
default-features = false
features = ["3d"]

[dependencies.bevy_mod_picking]
version = "0.17.0"

[dependencies.bevy_egui]
version = "0.23.0"

[dependencies.bevy_common_assets]
features = ["ron"]
version = "0.8.0"

[dependencies.bevy_asset_loader]
version = "0.18.0"

[dependencies.bevy-inspector-egui]
version = "0.21.0"

[dependencies.serde]
version = "1.0"

[dependencies.smooth-bevy-cameras]
version = "0.10.0"